# Warhammer_40k_AI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_V2.md  FACTION_INTEGRATION.md  July_22_2026_Update.md  README.md  UV_LOCK_GENERATION.md  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
ci/test_shards/: durations.json  shard-1.txt  shard-2.txt  shard-3.txt  shard-4.txt  worker_benchmark.json
conformance/typescript/: README.md  package-lock.json  package.json  tsconfig.json
contracts/: README.md  compatibility-policy.md  coordinate-system.md  manifest.json  openapi.yaml  redaction-policy.md  session-semantics.md
contracts/compatibility/: 1.0.0-shape.json  2.0.0-shape.json  3.0.0-shape.json
contracts/conformance-scenarios/: README.md
contracts/examples/: replay-metadata.json  support-profile.json
contracts/migrations/: 2-to-3.md
contracts/schemas/: annotated-decision-request.schema.json  create-session.schema.json  decision-family-coverage.schema.json  decision-family-live.schema.json  decision-request-view.schema.json  error-envelope.schema.json  event-delta.schema.json  finite-submission.schema.json  game-view.schema.json  interaction-conformance.schema.json  interaction-descriptor.schema.json  lifecycle-status.schema.json  opportunity-window-example.schema.json  parameterized-submission.schema.json  proposal-payload.schema.json  replay-metadata.schema.json  rules-catalog.schema.json  session-command-envelope.schema.json  session-command-outcome.schema.json  session-command-result.schema.json  session-create.schema.json  session-metadata.schema.json  session-projection.schema.json  support-profile.schema.json
data/army_lists/: cavalcade-shadow-bloodthirster.json
data/source_manifests/: aeldari_ability_semantic_description_text_v1.json  aeldari_ability_semantic_description_text_v2.json  faction_pack_datasheet_review_v1.json  gw_11e_faction_pack_predecessors_2026_06.yaml  gw_11e_faction_packs.yaml  gw_11e_pending_faction_packs_2026_07.yaml  gw_11e_supplemental_faction_packs.yaml  mfm_2026_07_review.json
docs/: ABILITY_SUPPORT_MATRIX_V2.md  ADAPTER_DECISION_CONTRACT.md  ATTACK_SEQUENCE_ORDERED_GROUP_ALLOCATION.md  CROSS_SOURCE_SEMANTIC_EQUIVALENCE.md  DECISION_SUBMISSION_CATALOG.md  FACTION_AGENT_IMPLEMENTATION_CONTRACT.md  MISSION_IMPLEMENTATION_STATUS.md  PHASE17K_WAHAPEDIA_BRIDGE_TEST_DECOMPOSITION.md  REMEDIATION_PLAN.md  TRIGGER_OPPORTUNITY_WINDOWS.md
docs/Archive/: July_22_2026_Update.md
docs/api/: decision_request_view.schema.json  event_stream_delta.schema.json  game_view.schema.json  rules_catalog_view.schema.json
docs/factions/: adepta-sororitas.md  adeptus-custodes.md  adeptus-mechanicus.md  aeldari.md  astra-militarum.md  black-templars.md  blood-angels.md  chaos-daemons.md  chaos-knights.md  chaos-space-marines.md  dark-angels.md  death-guard.md  deathwatch.md  drukhari.md  emperors-children.md  genestealer-cults.md  grey-knights.md  imperial-agents.md  imperial-knights.md  leagues-of-votann.md  necrons.md  orks.md  space-marines.md  space-wolves.md  tau-empire.md  thousand-sons.md  tyranids.md  world-eaters.md
docs/performance/: PHASE14_SHOOTING_MOVEMENT_PROFILE.md  PHASE7_GEOMETRY_BASELINE.md
docs/source_rules/: tacoma-open-2026-source-package.json
scripts/: bootstrap_lock.sh  build_external_contract.py  build_test_shards.py  export_ui_contract_fixtures.py  external_contract_session_examples.py  mock_event_layout_ui.py  profile_movement_pathing.py  run_local_session_dev_server.py  run_phase18m_reference_server.py  smoke_installed_contract_wheel.py  tacoma_2026_source_audit.py
src/warhammer40k_core/: __init__.py
tests/: conftest.py  deployment_submission_helpers.py  lifecycle_submission_helpers.py  movement_submission_helpers.py  phase10o_fall_back_helpers.py  phase10p_reserves_helpers.py  phase11c_command_phase_helpers.py  phase13b_shooting_declaration_helpers.py  phase15a_charge_declaration_helpers.py  phase15c_fight_order_helpers.py  phase15d_fight_resolution_helpers.py  phase18f_command_helpers.py  setup_completion_helpers.py
tests/benchmarks/: test_geometry_visibility_pathing_benchmarks.py
tests/code_quality/: source_index.py  test_adapter_decision_contract.py  test_ci_performance_gates.py  test_command_point_invariants.py  test_decision_submission_catalog.py  test_domain_boundaries.py  test_exception_policy.py  test_faction_content_runtime_structure.py  test_faction_integration_contract.py  test_generated_ability_support_artifacts.py  (+32 more)
tools/: __init__.py  aeldari_ability_semantic_descriptions.py  aeldari_datasheet_semantic_coverage.py  aeldari_datasheet_semantic_evidence.py  aeldari_datasheet_semantic_snapshot.py  aeldari_support_report.py  aeldari_support_review.py  apply_source_overlays.py  apply_transition_patches.py  build_catalog.py  build_mfm_update_review.py  build_model_geometry_overrides.py  build_source_reference_catalog.py  build_transition_patch.py  build_wahapedia_bridge.py  canonical_json_hash.py  cross_source_semantic_equivalence.py  emperors_children_support_report.py  faction_pack_datasheet_review.py  fetch_official_sources.py  generate_ability_support_matrix.py  generate_aeldari_ability_semantic_descriptions.py  generate_aeldari_aspect_warriors_rule_ir.py  generate_aeldari_autarchs_rule_ir.py  generate_aeldari_banshees_phoenix_lords_spiritseer_rule_ir.py  generate_aeldari_corsair_skyreavers_rule_ir.py  generate_aeldari_corsair_void_units_rule_ir.py  generate_aeldari_datasheet_semantic_coverage.py  generate_aeldari_kharseth_rule_ir.py  generate_aeldari_night_spinner_rule_ir.py  generate_aeldari_shroud_runners_wraithblades_rule_ir.py  generate_aeldari_war_walkers_wraithlord_rule_ir.py  generate_aeldari_wave_serpent_shining_spears_eldrad_dire_avengers_rule_ir.py  generate_aeldari_yriel_vypers_starfangs_rule_ir.py  generate_datasheet_keyword_lexicon.py  generate_faction_content_scaffold.py  generate_faction_stratagem_activation_support.py  generate_faction_subrule_source_package.py  import_mfm_points.py  promote_july_faction_packs.py  (+2 more)
(+2213 files in other folders)
