[project]
name = "warhammer40k-core-v2"
version = "0.1.0"
description = "Strict bottom-up Warhammer 40k core engine reconstruction."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "Proprietary" }
authors = [{ name = "SobolGaming" }]
dependencies = [
  "orjson>=3.10",
  "msgspec>=0.19",
  "pydantic>=2.11",
  "shapely>=2.1",
  "numpy>=2.2",
  "jsonschema>=4.23",
  "referencing>=0.36",
]

[dependency-groups]
test = [
  "pytest>=8.4",
  "pytest-cov>=6.2",
  "pytest-xdist>=3.7",
  "coverage[toml]>=7.9",
  "hypothesis>=6.135",
  "jsonschema>=4.23",
  "pytest-benchmark>=5.1",
]
lint = [
  "ruff>=0.12",
  "import-linter>=2.3",
  "deptry>=0.23",
]
typecheck = [
  "mypy>=1.16",
  "pyright>=1.1",
  "pytest>=8.4",
  "hypothesis>=6.135",
  "jsonschema>=4.23",
  "types-jsonschema>=4.26.0.20260518",
]
benchmark = [
  { include-group = "test" },
]
precommit = [
  "pre-commit>=4.2",
]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "typecheck" },
  { include-group = "benchmark" },
  { include-group = "precommit" },
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warhammer40k_core"]

[tool.hatch.build.targets.wheel.force-include]
"contracts/schemas" = "warhammer40k_core/contracts/schemas"

[tool.uv]
package = true

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "I", "B", "UP", "SIM", "C4", "DTZ", "PIE", "PT", "RET", "RUF", "TRY", "PTH",
]
ignore = [
  "TRY003", # Long domain-error messages are acceptable.
]

[tool.ruff.lint.per-file-ignores]
"tests/unit/**/*.py" = ["S101"]
"tests/fixtures/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true
pretty = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config -m 'not benchmark' --benchmark-disable"
testpaths = ["tests"]
markers = [
  "benchmark: opt-in performance benchmarks excluded from default test runs",
  "integration: multi-subsystem tests using real domain objects",
  "replay: deterministic replay and reconstruction tests",
  "slow: expensive tests excluded from fast local iteration",
  "stubbed: pure-function tests using stubs; forbidden for engine integration",
]

[tool.coverage.run]
branch = true
source = ["warhammer40k_core"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.importlinter]
root_package = "warhammer40k_core"

[[tool.importlinter.contracts]]
name = "Core must not import rules, engine, or adapters"
type = "forbidden"
source_modules = ["warhammer40k_core.core"]
forbidden_modules = [
  "warhammer40k_core.rules",
  "warhammer40k_core.engine",
  "warhammer40k_core.adapters",
]

[[tool.importlinter.contracts]]
name = "Geometry must not import rules, engine, adapters, or interfaces"
type = "forbidden"
source_modules = ["warhammer40k_core.geometry"]
forbidden_modules = [
  "warhammer40k_core.rules",
  "warhammer40k_core.engine",
  "warhammer40k_core.adapters",
  "warhammer40k_core.interfaces",
]

[[tool.importlinter.contracts]]
name = "Polygon geometry must not import domain or runtime packages"
type = "forbidden"
source_modules = ["warhammer40k_core.geometry.polygons"]
forbidden_modules = [
  "warhammer40k_core.core",
  "warhammer40k_core.rules",
  "warhammer40k_core.engine",
  "warhammer40k_core.adapters",
  "warhammer40k_core.interfaces",
]

[[tool.importlinter.contracts]]
name = "Adapters are leaf modules"
type = "forbidden"
source_modules = [
  "warhammer40k_core.core",
  "warhammer40k_core.geometry",
  "warhammer40k_core.rules",
  "warhammer40k_core.engine",
]
forbidden_modules = ["warhammer40k_core.adapters"]

[[tool.importlinter.contracts]]
name = "Rules must not import engine or adapters"
type = "forbidden"
source_modules = ["warhammer40k_core.rules"]
forbidden_modules = [
  "warhammer40k_core.engine",
  "warhammer40k_core.adapters",
]

[[tool.importlinter.contracts]]
name = "Interfaces may only import adapters and engine"
type = "forbidden"
source_modules = ["warhammer40k_core.interfaces"]
forbidden_modules = [
  "warhammer40k_core.core",
  "warhammer40k_core.geometry",
  "warhammer40k_core.rules",
  "warhammer40k_core.profiling",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Profiling may not import adapters or interfaces"
type = "forbidden"
source_modules = ["warhammer40k_core.profiling"]
forbidden_modules = [
  "warhammer40k_core.adapters",
  "warhammer40k_core.interfaces",
]

[[tool.importlinter.contracts]]
name = "No runtime package imports profiling"
type = "forbidden"
source_modules = [
  "warhammer40k_core.core",
  "warhammer40k_core.geometry",
  "warhammer40k_core.rules",
  "warhammer40k_core.engine",
  "warhammer40k_core.adapters",
  "warhammer40k_core.interfaces",
]
forbidden_modules = ["warhammer40k_core.profiling"]

[[tool.importlinter.contracts]]
name = "Runtime packages must not import AI"
type = "forbidden"
source_modules = [
  "warhammer40k_core.core",
  "warhammer40k_core.geometry",
  "warhammer40k_core.rules",
  "warhammer40k_core.engine",
  "warhammer40k_core.adapters",
  "warhammer40k_core.profiling",
  "warhammer40k_core.interfaces",
]
forbidden_modules = ["warhammer40k_core.ai"]

[[tool.importlinter.contracts]]
name = "AI must not import profiling or interfaces"
type = "forbidden"
source_modules = ["warhammer40k_core.ai"]
forbidden_modules = [
  "warhammer40k_core.profiling",
  "warhammer40k_core.interfaces",
]

[[tool.importlinter.contracts]]
name = "No runtime package imports interfaces"
type = "forbidden"
source_modules = [
  "warhammer40k_core.core",
  "warhammer40k_core.geometry",
  "warhammer40k_core.rules",
  "warhammer40k_core.engine",
  "warhammer40k_core.adapters",
  "warhammer40k_core.profiling",
]
forbidden_modules = ["warhammer40k_core.interfaces"]
